zeroidc/vendor/pin-project-lite/tests/ui/pinned_drop/call-drop-inner.stderr
error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> tests/ui/pinned_drop/call-drop-inner.rs:10:13
   |
10 |             __drop_inner(this);
   |             ^^^^^^^^^^^^ ---- argument unexpected
   |
note: function defined here
  --> tests/ui/pinned_drop/call-drop-inner.rs:3:1
   |
3  | / pin_project! {
4  | |     pub struct S {
5  | |         #[pin]
6  | |         field: u8,
...  |
12 | |     }
13 | | }
   | |_^
   = note: this error originates in the macro `$crate::__pin_project_make_drop_impl` (in Nightly builds, run with -Z macro-backtrace for more info)
help: remove the extra argument
   |
10 |             __drop_inner();
   |             ~~~~~~~~~~~~~~
